<resources>
    <string name="app_name">Synmatix</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="aus_address">27 Papworth Place , Meadowheights Victoria 3048, Australia.</string>
    <string name="AustraliaAddress">Australia Address</string>
    <string name="phone">Phone number</string>
    <string name="phonenum">03 999 80 420</string>
    <string name="ABN">ABN Number</string>
    <string name="ABN_num">36 619 784 495</string>
    <string name="workhours">Saturday - Sunday – Closed \n Monday – Friday 9am to 5pm</string>
    <string name="uk_add">UK Address</string>
    <string name="uk_address">9 Welland Green Southampton, Hampshire SO16 9DL</string>
    <string name="phone_uk">UK Number</string>
    <string name="phone_uknum">+44 23 8017 1178</string>
    <string name="tall">Toll Free</string>
    <string name="tall_free">0800 368 7556</string>
    <string name="link_add">Link address</string>
    <string name="address_web">info@synmatix.com.au</string>
    <string name="about">ABOUT</string>
    <string name="detail">Synmatix is a team of professionals having expertise in Web design and Development, Search engine Optimisation and Digital Marketing. We provide services in USA, UK, Singapore, Canada and Australia.</string>
</resources>